# MPI_Tasks

./: CMakeLists.txt  README.md  main.cpp  main.h
task1/: task1.cpp  task1.h
task10/: task10.cpp  task10.h
task11/: task11.cpp  task11.h
task12/: task12.cpp  task12.h
task13/: task13.cpp  task13.h
task14/: task14.cpp  task14.h
task16/: task16.cpp  task16.h
task2/: task2.cpp  task2.h
task3/: task3.cpp  task3.h
task4/: task4.cpp  task4.h
task5/: task5.cpp  task5.h
task6/: task6.cpp  task6.h
task7/: task7.cpp  task7.h
task8/: task8.cpp  task8.h
task9/: task9.cpp  task9.h
